fix navigation jumping bug

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/organisms/o-header/_o-header.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/organisms/o-header/_o-header.scss
@@ -7,8 +7,6 @@
   }
 
   &__menu{
-    transition: top $transition-fast $transition-ease;
-
     &.is-fixed {
       position: fixed;
       top: 0;
